# walrus-checkpoint-indexing

./: .gitignore  Cargo.toml  INDEXER_REPORT.md  README.md  build.rs  requirements.txt
docs/: ARCHIVE_NODE.md  CUSTOM_INDEXING.md
examples/: alt_checkpoint_parquet.rs  analyze_parquet.rs  deepbook_alt_parquet.rs  deepbook_events_aggregator.rs  deepbook_events_cli.rs  deepbook_events_forked_cli.rs  mass_indexer.rs  mass_indexer_parquet.rs  offline_replay.rs
scripts/: replay_from_parquet.sh  setup.sh
src/: blob.rs  config.rs  deepbook.rs  handlers.rs  indexer.rs  lib.rs  main.rs  node_health.rs  sliver.rs  storage.rs
