[package]
name = "walrus-checkpoint-indexing"
version = "0.1.0"
edition = "2021"
description = "Index Sui checkpoints from Walrus decentralized storage"
license = "Apache-2.0"
repository = "https://github.com/Evan-Kim2028/walrus-checkpoint-indexing"
keywords = ["sui", "walrus", "checkpoint", "indexing", "blockchain"]
categories = ["database", "asynchronous"]

[lib]
name = "walrus_checkpoint_indexing"
path = "src/lib.rs"

[[bin]]
name = "walrus-checkpoint-index"
path = "src/main.rs"

[dependencies]
# Async runtime
tokio = { version = "1.37", features = ["full"] }
futures = "0.3"

# Sui dependencies (pinned to mainnet-v1.64.2)
sui-types = { git = "https://github.com/MystenLabs/sui.git", tag = "mainnet-v1.64.2", package = "sui-types" }
sui-storage = { git = "https://github.com/MystenLabs/sui.git", tag = "mainnet-v1.64.2", package = "sui-storage" }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bcs = "0.1"

# HTTP client
reqwest = { version = "0.12", features = ["json"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# CLI
clap = { version = "4.5", features = ["derive", "env"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Utilities
hex = "0.4"
base64 = "0.22"
byteorder = "1.5"
async-trait = "0.1"

# Parquet output
parquet = "54"
arrow = "54"
duckdb = { version = "1.4.4", optional = true, features = ["bundled"] }

# Sui indexer alt framework integration
sui-indexer-alt-framework = { git = "https://github.com/MystenLabs/sui.git", tag = "mainnet-v1.64.2", package = "sui-indexer-alt-framework" }
sui-indexer-alt-framework-store-traits = { git = "https://github.com/MystenLabs/sui.git", tag = "mainnet-v1.64.2", package = "sui-indexer-alt-framework-store-traits" }
tempfile = "3.10"
scoped-futures = "0.1"
prometheus = "0.13"

[dev-dependencies]
tokio-test = "0.4"

# Sui indexer framework (optional - for full framework integration)
# Uncomment when ready to integrate with the full sui-indexer-alt-framework
# sui-indexer-alt-framework = { git = "https://github.com/MystenLabs/sui.git", tag = "mainnet-v1.64.2", package = "sui-indexer-alt-framework" }

[[example]]
name = "deepbook_events_aggregator"
path = "examples/deepbook_events_aggregator.rs"

[[example]]
name = "deepbook_events_cli"
path = "examples/deepbook_events_cli.rs"

[[example]]
name = "deepbook_events_forked_cli"
path = "examples/deepbook_events_forked_cli.rs"

[[example]]
name = "mass_indexer"
path = "examples/mass_indexer.rs"

[[example]]
name = "mass_indexer_parquet"
path = "examples/mass_indexer_parquet.rs"

[[example]]
name = "alt_checkpoint_parquet"
path = "examples/alt_checkpoint_parquet.rs"

[[example]]
name = "deepbook_alt_parquet"
path = "examples/deepbook_alt_parquet.rs"

[features]
default = []
# Enable DuckDB summaries for parquet outputs
duckdb = ["dep:duckdb"]
